# CrazyFlie-With-Depth-Estimation-Model

./: .gitignore  Dockerfile  README.md  data_viewer.py  download_models.sh  main.py  models_links.txt  requirements.txt  setup.py  start_container.sh
crazyflie_images/distance_sensor/: ds_1733513536_570134404.txt  ds_1733513537_494611453.txt  ds_1733513539_347982526.txt  ds_1733513542_167279369.txt  ds_1733513544_55335602.txt  ds_1733513553_256230444.txt  ds_1733513554_950789135.txt  ds_1733513555_838298959.txt  ds_1733513557_537285874.txt  ds_1733513560_845484584.txt  ds_1733513563_471765342.txt  ds_1733513569_923748955.txt  ds_1733513573_553678587.txt  ds_1733513578_728222597.txt  ds_1733513582_27930770.txt  ds_1733513582_874720034.txt  ds_1733513583_687942086.txt  ds_1733513590_255526250.txt  ds_1733513591_916525494.txt  ds_1733513594_537273168.txt  ds_1733513598_160244541.txt  ds_1733513599_86835083.txt  ds_1733513602_683597740.txt  ds_1733513605_369004787.txt  ds_1733513607_167211164.txt  ds_1733513609_861198909.txt  ds_1733513610_761994408.txt  (+101 more)
crazyflie_mapping_demo/ros2_ws/src/image_saver/: CMakeLists.txt  package.xml
crazyflie_mapping_demo/ros2_ws/src/image_saver/src/: image_saver.cpp
datasets/: dataset.py
models/: attention_blocks.py
neural_network_model/: Untitled13.ipynb  Untitled14.ipynb  __init__.py  convert_to_onnx.py  evaluate.py  evaluate_unet_with_pretrained_encoder.py  main.py  model_tester.py  requirements.txt  tester.py  train.py  train_unet_pretrained_encoder.py  train_unetresnet.py
training/: trainer.py
worlds/: world_cafe_1.sdf
(+805 files in other folders)
