<?xml version="1.0"?>
<package format="2">
    <name>image_saver</name>
    <version>0.0.0</version>
    <description>The image_saver package</description>
    <maintainer email="email@email.email">mmcza</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>OpenCV</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>